--- a/templates/settings.html
+++ b/templates/settings.html
@@ -37,7 +37,7 @@
     </div>
   {% endif %}
 
-  <form method="post" class="space-y-6 bg-white dark:bg-gray-700 p-6 rounded shadow settings-form">
+  <form method="post" class="space-y-6 bg-white dark:bg-gray-700 p-6 rounded shadow flex flex-col gap-4">
 
     <div class="grid gap-6 md:grid-cols-2">
 
